--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: expense_tracker
 description: A new Flutter project.
 
 # Prevent accidental publishing to pub.dev.
-publish_to: 'none'
+publish_to: "none"
 
 version: 1.0.0+1
 
@@ -10,16 +10,39 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+  bloc: ^7.2.1
+  dartz: ^0.10.0
   flutter:
     sdk: flutter
+  flutter_bloc: ^7.3.3
   flutter_localizations:
     sdk: flutter
+  flutter_screenutil: ^5.0.0+2
+  freezed_annotation: ^0.15.0
+  get: ^4.3.8
+  get_it: ^7.2.0
+  google_fonts: ^2.1.0
+  injectable: ^1.5.0
+  json_annotation: ^4.3.0
+  kt_dart: ^0.10.0
+  logger: ^1.1.0
+  lottie: ^1.2.1
+  path: ^1.8.0
+  path_provider: ^2.0.6
+  permission_handler: ^8.2.6
+  shimmer: ^2.0.0
+  supercharged: ^2.1.1
+  url_launcher: ^6.0.12
 
 dev_dependencies:
+  build_runner: ^2.1.5
+  flutter_launcher_icons: ^0.9.2
+  flutter_lints: ^1.0.0
   flutter_test:
     sdk: flutter
-
-  flutter_lints: ^1.0.0
+  freezed: ^0.15.1+1
+  injectable_generator: ^1.5.2
+  json_serializable: ^6.0.1
 
 flutter:
   uses-material-design: true
@@ -30,3 +53,11 @@ flutter:
   assets:
     # Add assets from the images directory to the application.
     - assets/images/
+
+flutter_icons:
+  # image_path: "assets/icons/launcher_icon.png"
+  android: true # can specify file name here e.g. "ic_launcher"
+  ios: true # can specify file name here e.g. "My-Launcher-Icon"
+  remove_alpha_ios: true
+  # adaptive_icon_background: "assets/icons/launcher_background.png" # only available for Android 8.0 devices and above
+  # adaptive_icon_foreground: "assets/icons/launcher_foreground.png" # only available for Android 8.0 devices and above
