--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,13 +10,18 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
-  bloc: ^7.2.1
+  bloc: ^8.0.1
   dartz: ^0.10.0
+  firebase_analytics: ^8.3.4
+  firebase_auth: ^3.2.0
+  firebase_core: ^1.10.0
+  firebase_crashlytics: ^2.3.0
+  firebase_messaging: ^11.1.0
   flutter:
     sdk: flutter
-  flutter_bloc: ^7.3.3
-  flutter_localizations:
-    sdk: flutter
+  flutter_bloc: ^8.0.0
+  flutter_config: ^2.0.0
+  flutter_local_notifications: ^9.1.4
   flutter_screenutil: ^5.0.0+2
   freezed_annotation: ^0.15.0
   get: ^4.3.8
@@ -24,6 +29,7 @@ dependencies:
   google_fonts: ^2.1.0
   injectable: ^1.5.0
   json_annotation: ^4.3.0
+  kotlin_flavor: ^0.2.0
   kt_dart: ^0.10.0
   logger: ^1.1.0
   lottie: ^1.2.1
