--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ environment:
 
 dependencies:
   bloc: ^8.0.1
+  cloud_firestore: ^3.1.0
   dartz: ^0.10.0
   firebase_analytics: ^8.3.4
   firebase_auth: ^3.2.0
