--- a/.gitignore
+++ b/.gitignore
@@ -48,7 +48,7 @@ app.*.map.json
 *.config.dart
 *.g.dart
 *.freezed.dart
-
+*.gr.dart
 .env
 /android/app/google-services.json
 /ios/GoogleService-Info.plist
