--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+  auto_route: ^3.1.3
   bloc: ^8.0.1
   cloud_firestore: ^3.1.0
   dartz: ^0.10.0
@@ -23,12 +24,15 @@ dependencies:
   flutter_bloc: ^8.0.0
   flutter_config: ^2.0.0
   flutter_local_notifications: ^9.1.4
+  flutter_localizations:
+    sdk: flutter
   flutter_screenutil: ^5.0.0+2
+  flutter_svg: ^0.23.0+1
   freezed_annotation: ^0.15.0
-  get: ^4.3.8
   get_it: ^7.2.0
   google_fonts: ^2.1.0
   injectable: ^1.5.0
+  intl: ^0.17.0
   json_annotation: ^4.3.0
   kotlin_flavor: ^0.2.0
   kt_dart: ^0.10.0
@@ -42,6 +46,7 @@ dependencies:
   url_launcher: ^6.0.12
 
 dev_dependencies:
+  auto_route_generator: ^3.1.0
   build_runner: ^2.1.5
   flutter_launcher_icons: ^0.9.2
   flutter_lints: ^1.0.0
@@ -57,6 +62,9 @@ flutter:
   assets:
     # Add assets from the images directory to the application.
     - assets/images/
+    - assets/images/boarding/
+
+  generate: true
 
 flutter_icons:
   # image_path: "assets/icons/launcher_icon.png"
@@ -65,3 +73,5 @@ flutter_icons:
   remove_alpha_ios: true
   # adaptive_icon_background: "assets/icons/launcher_background.png" # only available for Android 8.0 devices and above
   # adaptive_icon_foreground: "assets/icons/launcher_foreground.png" # only available for Android 8.0 devices and above
+flutter_intl:
+  enabled: true
