--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,6 @@ dependencies:
   path_provider: ^2.0.6
   permission_handler: ^8.2.6
   shimmer: ^2.0.0
-  supercharged: ^2.1.1
   url_launcher: ^6.0.12
 
 dev_dependencies:
@@ -63,6 +62,7 @@ flutter:
     # Add assets from the images directory to the application.
     - assets/images/
     - assets/images/boarding/
+    - assets/lottie/
 
   generate: true
 
