--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   bloc: ^8.0.1
   cloud_firestore: ^3.1.0
   dartz: ^0.10.0
+  equatable: ^2.0.3
   firebase_analytics: ^8.3.4
   firebase_auth: ^3.2.0
   firebase_core: ^1.10.0
@@ -31,6 +32,7 @@ dependencies:
   freezed_annotation: ^0.15.0
   get_it: ^7.2.0
   google_fonts: ^2.1.0
+  google_sign_in: ^5.2.1
   injectable: ^1.5.0
   intl: ^0.17.0
   json_annotation: ^4.3.0
@@ -43,6 +45,7 @@ dependencies:
   permission_handler: ^8.2.6
   shimmer: ^2.0.0
   url_launcher: ^6.0.12
+  uuid: ^3.0.5
 
 dev_dependencies:
   auto_route_generator: ^3.1.0
