--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   firebase_core: ^1.10.0
   firebase_crashlytics: ^2.3.0
   firebase_messaging: ^11.1.0
+  flash: ^2.0.3
   flutter:
     sdk: flutter
   flutter_bloc: ^8.0.0
