--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.0.0
   flutter_config: ^2.0.0
+  flutter_facebook_auth: ^3.5.6+3
   flutter_local_notifications: ^9.1.4
   flutter_localizations:
     sdk: flutter
