--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_screenutil: ^5.0.0+2
+  flutter_secure_storage: ^5.0.2
   flutter_svg: ^0.23.0+1
   freezed_annotation: ^0.15.0
   get_it: ^7.2.0
